# tva-intracom-6

./: .gitignore  README.md  app.py  conftest.py  generate_dataset.py  generer_donnees_10k.py  generer_donnees_multian.py  migrate_vies_to_postgres.py  pyproject.toml  railway.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: ventes_multian_test.csv
schemas/: oss_dgfip_complete.xsd  oss_dgfip_minimal.xsd  oss_vat_return.xsd
tests/: generer_donnees.py  test_amazon.py  test_billing_payment_quotas.py  test_ecb_rates.py  test_engine.py  test_excel.py  test_parsers.py  test_report_bucket_coverage.py  test_scenarios_fiscaux.py  test_vies.py  test_vies_cache.py
tva-site/: BUILD_README.md  arbre-decision.html  arbre-décision.html  build.py  cas-pratiques.html  confidentialite.html  documentation.html  faq.html  glossaire.html  index.html  interface.html  mentions.html  regimes.html  script.js  securite.html  style.css  tarifs.html  tutoriels.html
tva-site/_includes/: footer.html  head.html
tva_intracom/: __init__.py  amazon_adapter.py  amazon_spapi.py  auth.py  auth_supabase.py  billing.py  ca3_report.py  cli.py  config.py  ecb_rates.py  engine.py  excel_report.py  fec_export.py  historical_rates_widget.py  local_vat_report.py  models.py  oss_export.py  oss_xml.py  rates.py  report.py  security.py  tva_intracom_ca3_generator_v2.py  vies.py  vies_cache.db  vies_certificate.py  vies_engine.py
tva_intracom/data/: amazon_sample.tsv  amazon_sample_100.tsv  amazon_taxe_amazon_test.tsv  amazon_vat_10k_transactions_report_2026.tsv  ventes_exemple.csv
tva_intracom/i18n/: __init__.py  de.toml  en.toml  es.toml  fr.toml  i18n.py  it.toml  (+2 more)
(+49 files in other folders)
